--- a/app/src/main/res/layout/activity_home_attractions_dialog.xml
+++ b/app/src/main/res/layout/activity_home_attractions_dialog.xml
@@ -4,22 +4,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="5dp">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="אתרים באזורך"
+        android:background="@color/rtgGreen"
+        android:textSize="@dimen/text_large"
+        android:textColor="@color/white"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/lv_attractions">
 
     </ListView>
-
-    <Button
-        android:id="@+id/btn_go_to_track"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorAccent"
-        android:text="למסלול"
-        android:textSize="25sp"
-        android:textColor="@android:color/white" />
 
 </LinearLayout>
